@@ -92,6 +92,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|TimeZone
 import|;
 end_import
@@ -828,6 +838,170 @@ name|FieldType
 operator|.
 name|OMIT_NORMS
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testTrieDateField
+specifier|public
+name|void
+name|testTrieDateField
+parameter_list|()
+block|{
+name|schema
+operator|=
+name|IndexSchemaFactory
+operator|.
+name|buildIndexSchema
+argument_list|(
+name|testConfHome
+operator|+
+literal|"schema15.xml"
+argument_list|,
+name|config
+argument_list|)
+expr_stmt|;
+name|TrieDateField
+name|tdt
+init|=
+operator|new
+name|TrieDateField
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"sortMissingLast"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"indexed"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"stored"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"docValues"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"precisionStep"
+argument_list|,
+literal|"16"
+argument_list|)
+expr_stmt|;
+name|tdt
+operator|.
+name|setArgs
+argument_list|(
+name|schema
+argument_list|,
+name|args
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|tdt
+operator|.
+name|hasProperty
+argument_list|(
+name|FieldType
+operator|.
+name|OMIT_NORMS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|tdt
+operator|.
+name|hasProperty
+argument_list|(
+name|FieldType
+operator|.
+name|SORT_MISSING_LAST
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|tdt
+operator|.
+name|hasProperty
+argument_list|(
+name|FieldType
+operator|.
+name|INDEXED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|tdt
+operator|.
+name|hasProperty
+argument_list|(
+name|FieldType
+operator|.
+name|STORED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|tdt
+operator|.
+name|hasProperty
+argument_list|(
+name|FieldType
+operator|.
+name|DOC_VALUES
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|16
+argument_list|,
+name|tdt
+operator|.
+name|getPrecisionStep
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
